1999-06-03  James Henstridge  <james@daa.com.au>

	* Makefile.am (cxx_SUBDIRS): add xbill to the build.

1999-06-03  James Henstridge  <james@daa.com.au>

	* xbill/*: added a new game

	* configure.in: added entries to create xbill's makefiles.  The game
	is not built by default yet.

1999-04-24  Shooby Ban <bansz@szif.hu>

	* glines/*: Added a new game.
	  po/hu.po: Added hungarian translations.

1999-04-18  Matthias Warkus  <mawa@iname.com>

	* */*.desktop: Updated German translations.

1999-04-10  Scott D. Heavner  <sdh@po.cwru.edu>

	* configure.in: Add gyahtzee (gtali) help directory to list of
	makefiles. 

1999-04-05  Chris Rogers <gandalf@pobox.com>

	* configure.in: Added gataxx.

	* Makefile.am (SUBDIRS): Added gataxx.

1999-02-22  Jonathan Blandford  <jrb@redhat.com>

	* configure.in (ALL_LINGUAS): nl doesn't go in until someone
	actually does a translation.
	(ZVT_LIBS): lets also remove trypeaks.  

1999-02-19  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in (ZVT_LIBS): Define to `gnome-config --libs zvt`.

1999-02-08  Elliot Lee  <sopwith@redhat.com>

	* Fix help file installation in same-gnome.

1999-02-03  Arturo Espinosa <arturo@nuclecu.unam.mx>

	* configure.in: moved same-gnome's help files to help/C, instead of C.
	  Added gturing's help files.

1999-01-31  Ian Peters  <ipeters@acm.org>

	* configure.in: Added gnibbles.

	* Makefile.am (SUBDIRS): Added gnibbles.

1999-01-25  Mark Rae  <m.rae@inpharmatica.co.uk>

	* configure.in: Added gnobots2.

	* Makefile.am (SUBDIRS): Added gnobots2.

1999-01-24  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* configure.in (AC_OUTPUT): Added the gnobots help Makefiles to
	the list of files to be generated.

1999-01-12  Chris Lahey  <clahey@umich.edu>

	* acconfig.h: Added #undef WITH_SYMBOL_UNDERSCORE, because it
	seems to be required now for some reason.

	* configure.in: Added metatris.

	* Makefile.am (SUBDIRS): Added metatris.

1998-12-30  Jeff Garzik  <jgarzik@pobox.com>
