@@ -1,3 +1,7 @@
+1999-08-27  Chris Rogers <gandalf@darkcorner.net>
+
+	* Makefile.am (cxx_SUBDIRS): add gataxx to the build.
+
 1999-06-03  James Henstridge  <james@daa.com.au>
 
 	* Makefile.am (cxx_SUBDIRS): add xbill to the build.
